--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     main { padding: 2em; display: flex; justify-content: space-between; min-height: calc(100vh - 160px); }
     .products { width: 70%; }
     .section h2 { font-size: 1.2em; margin-bottom: 0.5em; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1em; }
+    .grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 1em; }
     .product { background: white; border: 1px solid #ccc; border-radius: 8px; padding: 1em; text-align: center; }
     .filter-box { width: 28%; background: white; border: 1px solid #ccc; padding: 1em; border-radius: 8px; height: fit-content; }
     .filter-box h3 { margin-top: 0; }
@@ -39,7 +39,7 @@
   <h1>GadgetHub</h1>
   <nav>
     <a href="#">Головна</a>
-    <a href="#">Каталог</a>
+    <a href="catalog.html">Каталог</a>
     <a href="#">Реєстрація</a>
     <a href="#">Кошик</a>
   </nav>
@@ -50,8 +50,10 @@
     <div class="section">
       <h2>🔁 Рекомендовані товари</h2>
       <div class="grid">
-        <div class="product">Чохол для iPhone<br><small>249 грн</small></div>
-        <div class="product">Зарядка Baseus<br><small>599 грн</small></div>
+        <div class="product">Чохол iPhone 14<br><small>299 грн</small></div>
+        <div class="product">Зарядка Baseus 20Вт<br><small>649 грн</small></div>
+        <div class="product">Навушники TWS Pro<br><small>1199 грн</small></div>
+        <div class="product">Захисне скло 10H<br><small>159 грн</small></div>
       </div>
     </div>
 
