--- a/catalog.html
+++ b/catalog.html
@@ -27,22 +27,22 @@
       padding: 1em;
       text-align: center;
       font-size: 0.9em;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+      margin-top: 2em;
     }
   </style>
 </head>
 <body>
 
-<header>
-  <h1><a href="index.html" style="color: white; text-decoration: none;">GadgetHub – Каталог</a></h1>
-  <nav>
-    <a href="index.html">Головна</a>
-    <a href="#">Кошик</a>
+
+<header style="background: #222; color: white; padding: 1em; display: flex; justify-content: space-between; align-items: center;">
+  <a href="index.html" style="font-size: 2.5em; color: white; text-decoration: none;">GadgetHub</a>
+  <nav style="margin-right: 30px;">
+    <a href="catalog.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Каталог</a>
+    <a href="#" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
+    <a href="#" style="color: white; margin-left: 30px; text-decoration: none;">Реєстрація</a>
   </nav>
-  <div><a href="#" style="color:white;text-decoration:none;">Реєстрація</a></div>
 </header>
+
 
 <div class="container">
   <h2>Усі товари</h2>
@@ -143,5 +143,18 @@
 <footer>
   &copy; 2025 GadgetHub. Усі права захищено.
 </footer>
+
+<script>
+  document.querySelectorAll(".product a").forEach(link => {
+    const text = link.textContent.toLowerCase();
+    link.addEventListener("click", () => {
+      if (text.includes("чохол")) localStorage.setItem("selectedCategory", "case");
+      else if (text.includes("заряд")) localStorage.setItem("selectedCategory", "charger");
+      else if (text.includes("наушн") || text.includes("навушн")) localStorage.setItem("selectedCategory", "headphones");
+      else if (text.includes("скло")) localStorage.setItem("selectedCategory", "glass");
+    });
+  });
+</script>
 </body>
+
 </html>
