--- a/glass2.html
+++ b/glass2.html
@@ -4,25 +4,81 @@
   <meta charset="UTF-8">
   <title>Скло 10H матове Samsung – GadgetHub</title>
   <style>
-    body { font-family: Arial, sans-serif; background: #f2f2f2; margin: 0; padding: 0; }
-    header { background: #222; color: white; padding: 1em 2em; display: flex; justify-content: space-between; align-items: center; }
-    .container { padding: 2em; }
-    img { width: 200px; height: 200px; object-fit: cover; border-radius: 8px; }
-    .card { background: white; padding: 2em; border-radius: 8px; box-shadow: 0 0 4px rgba(0,0,0,0.1); }
-    .filters p { margin: 0.3em 0; }
-    .similar { margin-top: 2em; }
-    .similar .product { background: white; padding: 1em; border-radius: 6px; display: inline-block; margin-right: 1em; box-shadow: 0 0 2px rgba(0,0,0,0.1); }
-    footer { background: #eee; text-align: center; padding: 1em; margin-top: 3em; }
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100%;
+    }
+
+    header {
+      background: #222;
+      color: white;
+      padding: 1em 2em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .container {
+      padding: 2em;
+      flex: 1;
+    }
+
+    img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .card {
+      background: white;
+      padding: 2em;
+      border-radius: 8px;
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+    }
+
+    .filters p {
+      margin: 0.3em 0;
+    }
+
+    .similar {
+      margin-top: 2em;
+    }
+
+    .similar .product {
+      background: white;
+      padding: 1em;
+      border-radius: 6px;
+      display: inline-block;
+      margin-right: 1em;
+      box-shadow: 0 0 2px rgba(0,0,0,0.1);
+    }
+
+    footer {
+      background: #eee;
+      text-align: center;
+      padding: 1em;
+      margin-top: auto;
+      width: 100%;
+      clear: both;
+    }
   </style>
 </head>
 <body>
   <header>
-    <h1>GadgetHub</h1>
+    <a href="index.html" style="color:white;text-decoration:none;">
+      <h1>GadgetHub</h1>
+    </a>
     <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
   </header>
   <div class="container">
     <div class="card">
-      <img src="https://via.placeholder.com/200" alt="Скло 10H матове Samsung">
+      <img src="img/glass2.webp" alt="Скло 10H матове Samsung">
       <h2>Скло 10H матове Samsung</h2>
       <div class="filters">
         <p><strong>Матеріал:</strong> Скло</p>
@@ -33,7 +89,15 @@
     </div>
     <div class="similar">
       <h3>Схожі товари</h3>
-      <div class='product'>Захисне скло iPhone 13</div><div class='product'>3D Touch скло Xiaomi</div><div class='product'>Глянцеве скло 9H</div>
+      <div class="product">
+        <a href="glass1.html">Захисне скло iPhone 13</a>
+      </div>
+      <div class="product">
+        <a href="glass3.html">3D Touch скло Xiaomi</a>
+      </div>
+      <div class="product">
+        <a href="glass4.html">Глянцеве скло 9H</a>
+      </div>
     </div>
   </div>
   <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
