--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="uk">
 <head>
@@ -13,7 +12,7 @@
     h2 { margin-bottom: 0.5em; }
     .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 1em; }
     .product { background: white; border: 1px solid #ccc; border-radius: 8px; padding: 1em; text-align: center; }
-    footer { background: #eee; padding: 1em; text-align: center; margin-top: 2em; }
+    footer { background: #525252; padding: 1em; text-align: center; margin-top: 2em; }
   </style>
 </head>
 <body>
@@ -53,7 +52,7 @@
   </div>
 </main>
 
-<footer style='background:#eee; padding: 1em; text-align:center; margin-top: 2em;'>
+<footer style='background:#525252; color: white; padding: 1em; text-align:center; margin-top: 2em;'>
   &copy; 2025 GadgetHub. Усі права захищено.
 </footer>
 
