--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
   <a href="index.html" class="logo">GadgetHub</a>
   <nav>
     <a href="catalog.html">Каталог</a>
-    <a href="#">Кошик</a>
+    <a href="cart.html">Кошик</a>
     <a href="#">Реєстрація</a>
   </nav>
 </header>
