--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <nav style="margin-right: 30px;">
     <a href="catalog.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Каталог</a>
-    <a href="#" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
+    <a href="cart.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
     <a href="#" style="color: white; margin-left: 30px; text-decoration: none;">Реєстрація</a>
   </nav>
 </header>
