--- a/sing-in.html
+++ b/sing-in.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Реєстрація – GadgetHub</title>
   <style>
     body {
@@ -11,86 +11,86 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
+      margin: 0;
     }
 
-    .form-container {
+    .register-container {
       background: white;
       padding: 2em;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      width: 300px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      width: 320px;
     }
 
-    input {
-      width: 100%;
-      padding: 10px;
+    h2 {
+      text-align: center;
       margin-bottom: 1em;
-      border-radius: 5px;
+    }
+
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 0.75em;
+      margin-bottom: 1em;
       border: 1px solid #ccc;
+      border-radius: 5px;
     }
 
     button {
       width: 100%;
-      padding: 10px;
-      background: #222;
+      padding: 0.75em;
+      background-color: #222;
       color: white;
       border: none;
       border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
     }
 
-    #message {
+    button:hover {
+      background-color: #444;
+    }
+
+    .link {
+      text-align: center;
       margin-top: 1em;
-      color: green;
+    }
+
+    .link a {
+      color: #222;
+      text-decoration: none;
+    }
+
+    .link a:hover {
+      text-decoration: underline;
+    }
+
+    .error {
+      color: red;
+      font-size: 0.9em;
+      text-align: center;
+      margin-bottom: 1em;
     }
   </style>
 </head>
 <body>
-
-  <div class="form-container">
+  <div class="register-container">
     <h2>Реєстрація</h2>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Пароль" required>
-    <button onclick="register()">Зареєструватися</button>
-    <p id="message"></p>
+    <div id="register-error" class="error"></div>
+    <input type="email" id="register-email" placeholder="Email" />
+    <input type="password" id="register-password" placeholder="Пароль" />
+    <button onclick="registerUser()">Зареєструватися</button>
+
+    <div class="link">
+      Вже є акаунт? <a href="login.html">Увійти</a>
+    </div>
   </div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
-
-  <script>
-    // 🔥 1. Налаштування Firebase — заміни на свої
-    const firebaseConfig = {
-      apiKey: "AIzaSyBbv17e9KU79WSjkODDU0Hi_b9g2_vzPrk",
-      authDomain: "gadgethub-44258.firebaseapp.com",
-      projectId: "gadgethub-44258",
-      storageBucket: "gadgethub-44258.firebasestorage.app",
-      messagingSenderId: "231922939477",
-      appId: "1:231922939477:web:01f9436b11c2ff2a9b86dc"
-    };
-
-    // Ініціалізація Firebase
-    firebase.initializeApp(firebaseConfig);
-
-    // 🔐 Функція реєстрації
-    function register() {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      const message = document.getElementById("message");
-
-      firebase.auth().createUserWithEmailAndPassword(email, password)
-        .then((userCredential) => {
-          const user = userCredential.user;
-          message.textContent = "Успішно зареєстровано!";
-          message.style.color = "green";
-          console.log("Зареєстровано:", user.email);
-        })
-        .catch((error) => {
-          console.error(error);
-          message.textContent = error.message;
-          message.style.color = "red";
-        });
-    }
+  <!-- Підключення скриптів -->
+  <script type="module" src="auth.js"></script>
+  <script type="module">
+    import { registerUser } from './auth.js';
+    window.registerUser = registerUser; // робимо глобально доступним
   </script>
 </body>
 </html>
