--- a/login.html
+++ b/login.html
@@ -86,6 +86,6 @@
   </div>
 
   <!-- Firebase SDK (додай відповідні ключі у auth.js) -->
-<script type="module" src="auth.js"></script>
+<script type="module" src="js/loginUser.js"></script>
 </body>
 </html>
