--- a/login.html
+++ b/login.html
@@ -85,7 +85,6 @@
     </div>
   </div>
 
-  <!-- Firebase SDK (додай відповідні ключі у auth.js) -->
-<script type="module" src="js/loginUser.js"></script>
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
