--- a/login.html
+++ b/login.html
@@ -85,6 +85,10 @@
     </div>
   </div>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.11.1/firebase-auth.js"></script>
+
   <script type="module" src="js/login.js"></script>
 </body>
 </html>
