--- a/auth.html
+++ b/auth.html
@@ -2,66 +2,103 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
-  <title>Авторизація | GadgetHub</title>
+  <title>Авторизація | CoworklySpace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #f4f7f9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .container {
-      background: white;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 400px;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 20px;
-      color: #007bff;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:hover {
-      background-color: #0056b3;
-    }
-    .tabs {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 20px;
-    }
-    .tabs button {
-      width: 48%;
-    }
-    .message {
-      text-align: center;
-      margin-top: 10px;
-      color: green;
-    }
-  </style>
+<style>
+  body {
+    font-family: 'Roboto', sans-serif;
+    background: #f0f0f0; /* Світло-сірий фон */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+
+  .container {
+    background: #ffffff;
+    padding: 40px 30px 80px; /* Додано простір знизу */
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 420px;
+    position: relative;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 24px;
+    color: #333;
+  }
+
+  input {
+    width: 100%;
+    padding: 14px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    font-size: 1rem;
+    background: #fafafa;
+  }
+
+  input:focus {
+    border-color: #888;
+    outline: none;
+  }
+
+  button.auth-btn {
+    width: 100%;
+    padding: 14px;
+    background-color: #333;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.3s ease;
+    margin-top: 10px;
+  }
+
+  button.auth-btn:hover {
+    background-color: #555;
+  }
+
+  .tabs {
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
+    right: 30px;
+  }
+
+  .tabs button {
+    width: 48%;
+    background: #e0e0e0;
+    color: #333;
+    border: 1px solid #bbb;
+    border-radius: 8px;
+    padding: 12px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+
+  .tabs button:hover,
+  .tabs button.active {
+    background: #333;
+    color: #fff;
+  }
+
+  .message {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 0.95rem;
+    color: green;
+  }
+</style>
 </head>
 <body>
   <div class="container">
