--- a/auth.html
+++ b/auth.html
@@ -111,14 +111,14 @@
       <h2>Вхід</h2>
       <input type="email" id="login-email" placeholder="Email" required />
       <input type="password" id="login-password" placeholder="Пароль" required />
-      <button onclick="login()">Увійти</button>
+      <button class="auth-btn" onclick="login()">Увійти</button>
     </div>
 
     <div id="register-form" style="display:none;">
       <h2>Реєстрація</h2>
       <input type="email" id="register-email" placeholder="Email" required />
       <input type="password" id="register-password" placeholder="Пароль" required />
-      <button onclick="register()">Зареєструватися</button>
+      <button class="auth-btn" onclick="register()">Зареєструватися</button>
     </div>
 
     <div id="auth-message" class="message"></div>
