--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
   <nav>
     <a href="catalog.html">Каталог</a>
     <a href="cart.html">Кошик</a>
-    <a href="login.html">Реєстрація</a>
+    <a href="auth.html">Реєстрація</a>
   </nav>
 </header>
 
