--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav style="margin-right: 30px;">
     <a href="catalog.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Каталог</a>
     <a href="cart.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
-    <a href="auth.html" style="color: white; margin-left: 30px; text-decoration: none; id="registerLink">Реєстрація</a>
+    <a href="auth.html" id="registerLink" style="color: white; margin-left: 30px; text-decoration: none;">Реєстрація</a>
     <button id="logoutBtn" style="display: none;">Вийти</button>
   </nav>
 </header>
