--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <a href="catalog.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Каталог</a>
     <a href="cart.html" id="cartLink" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
     <a href="auth.html" id="registerLink" style="color: white; margin-left: 30px; text-decoration: none;">Реєстрація</a>
-    <button id="logoutBtn" style="display: none;">Вийти</button>
+    <button id="logoutBtn" style="display: none; background: none; border: none; color: white; font-size: 1.2em; cursor: pointer; margin: 0 20px;">Вийти</button>
   </nav>
 </header>
 
