--- a/catalog.html
+++ b/catalog.html
@@ -216,6 +216,6 @@
   });
 </script>
   
-<script type="module" src="js/auth-state.js"></script>
+<script type="module" src="js/index-auth.js"></script>
 </body>
 </html>
