--- a/cart.html
+++ b/cart.html
@@ -69,30 +69,11 @@
     <div id="cart-container">
       <!-- Сюди будуть додаватись товари -->
     </div>
+    <p id="totalPrice" style="font-weight: bold;"></p>
   </div>
 
   <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
 
-  <script>
-    const cartContainer = document.getElementById("cart-container");
-    const cartItems = JSON.parse(localStorage.getItem("CartLocalStorage")) || [];
-
-    if (cartItems.length === 0) {
-      cartContainer.innerHTML = '<p class="cart-empty">Ваш кошик порожній.</p>';
-    } else {
-      cartItems.forEach(item => {
-        const div = document.createElement("div");
-        div.className = "cart-item";
-        div.innerHTML = `
-          <img src="${item.image}" alt="${item.name}">
-          <div>
-            <h3>${item.name}</h3>
-            <p><strong>Ціна:</strong> ${item.price}</p>
-          </div>
-        `;
-        cartContainer.appendChild(div);
-      });
-    }
-  </script>
+  <script src="cart.js"></script>
 </body>
 </html>
