--- a/cart.html
+++ b/cart.html
@@ -66,10 +66,9 @@
 
   <div class="container">
     <h2>Ваш кошик</h2>
-    <div id="cart-container">
-      <!-- Сюди будуть додаватись товари -->
-    </div>
+    <div id="cart-container"></div>
     <p id="totalPrice" style="font-weight: bold;"></p>
+    <button id="clearCartBtn">Очистити кошик</button>
   </div>
 
   <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
