--- a/cart.html
+++ b/cart.html
@@ -73,6 +73,6 @@
 
   <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
 
-  <script src="cart.js"></script>
+  <script src="js/cart.js"></script>
 </body>
 </html>
