--- a/cart.html
+++ b/cart.html
@@ -71,7 +71,9 @@
     <button id="clearCartBtn">Очистити кошик</button>
   </div>
 
-  <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
+<footer class="site-footer">
+  &copy; 2025 GadgetHub. Усі права захищено.
+</footer>
 
   <script src="js/cart.js"></script>
 </body>
