--- a/cart.html
+++ b/cart.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 <body>
-  <header>
+  <header class="site-header">
     <a href="index.html" style="color:white;text-decoration:none;"><h1>GadgetHub</h1></a>
     <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
   </header>
