--- a/case2.html
+++ b/case2.html
@@ -13,7 +13,7 @@
       flex-direction: column;
       min-height: 100%;
     }
-    
+
     header {
       background: #222;
       color: white;
@@ -22,7 +22,7 @@
       justify-content: space-between;
       align-items: center;
     }
-    
+
     .container {
       padding: 2em;
       flex: 1;
@@ -57,6 +57,21 @@
       display: inline-block;
       margin-right: 1em;
       box-shadow: 0 0 2px rgba(0,0,0,0.1);
+    }
+
+    .add-to-cart-btn {
+      margin-top: 1em;
+      padding: 0.5em 1em;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      font-size: 1em;
+    }
+
+    .add-to-cart-btn:hover {
+      background: #0056b3;
     }
 
     footer {
@@ -118,5 +133,6 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+  </script>
 </body>
 </html>
