--- a/glass2.html
+++ b/glass2.html
@@ -137,6 +137,6 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
-  <script>
+  </script>
 </body>
 </html>
