--- a/charger4.html
+++ b/charger4.html
@@ -136,6 +136,6 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
-  <script>
+  </script>
 </body>
 </html>
