--- a/headphones3.html
+++ b/headphones3.html
@@ -136,6 +136,6 @@ body {
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
-  <script>
+  </script>
 </body>
 </html>
