--- a/cart.html
+++ b/cart.html
@@ -3,16 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <title>Кошик – GadgetHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f9f9f9;
       margin: 0;
-      padding: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     header {
-      background: #222;
+      background: #1f2937;
       color: white;
       padding: 1em 2em;
       display: flex;
@@ -20,61 +25,118 @@
       align-items: center;
     }
 
+    .logo {
+      font-size: 2em;
+      font-weight: 600;
+      text-decoration: none;
+      color: white;
+    }
+
     .container {
-      padding: 2em;
+      flex: 1;
+      padding: 2rem 5vw;
     }
 
     h2 {
-      margin-bottom: 1em;
+      margin-bottom: 1.5rem;
     }
 
     .cart-item {
       display: flex;
       align-items: center;
-      margin-bottom: 1em;
       background: white;
-      padding: 1em;
-      border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      border-radius: 12px;
+      padding: 1rem;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     }
 
     .cart-item img {
       width: 100px;
       height: 100px;
       object-fit: cover;
-      margin-right: 1em;
+      margin-right: 1.5rem;
       border-radius: 8px;
+    }
+
+    .cart-item-info {
+      flex: 1;
+    }
+
+    .cart-item-name {
+      font-weight: 600;
+      margin-bottom: 0.5rem;
+    }
+
+    .cart-item-price {
+      color: #10b981;
+      font-weight: bold;
     }
 
     .cart-empty {
       color: #777;
+      font-style: italic;
+    }
+
+    .total {
+      font-size: 1.2rem;
+      font-weight: 600;
+      margin-top: 1.5rem;
+    }
+
+    #clearCartBtn {
+      background-color: #ef4444;
+      color: white;
+      padding: 0.7rem 1.2rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      margin-top: 1rem;
+    }
+
+    #clearCartBtn:hover {
+      background-color: #dc2626;
     }
 
     footer {
-      background: #eee;
+      background: #374151;
       text-align: center;
+      color: white;
       padding: 1em;
-      margin-top: 2em;
+      margin-top: auto;
+    }
+
+    @media (max-width: 600px) {
+      .cart-item {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .cart-item img {
+        margin-bottom: 1rem;
+      }
     }
   </style>
 </head>
 <body>
-  <header class="site-header">
-    <a href="index.html" style="color:white;text-decoration:none;"><h1>GadgetHub</h1></a>
-    <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
-  </header>
 
-  <div class="container">
-    <h2>Ваш кошик</h2>
-    <div id="cart-container"></div>
-    <p id="totalPrice" style="font-weight: bold;"></p>
-    <button id="clearCartBtn">Очистити кошик</button>
-  </div>
+<header>
+  <a href="index.html" class="logo">GadgetHub</a>
+  <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
+</header>
 
-<footer class="site-footer">
+<div class="container">
+  <h2>Ваш кошик</h2>
+  <div id="cart-container"></div>
+  <p id="totalPrice" class="total"></p>
+  <button id="clearCartBtn">Очистити кошик</button>
+</div>
+
+<footer>
   &copy; 2025 GadgetHub. Усі права захищено.
 </footer>
 
-  <script src="js/cart.js"></script>
+<script src="js/cart.js"></script>
 </body>
 </html>
