--- a/case1.html
+++ b/case1.html
@@ -183,6 +183,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "case1");
   </script>
 </body>
 </html>
