--- a/case2.html
+++ b/case2.html
@@ -184,6 +184,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "case2");
   </script>
 </body>
 </html>
