--- a/case3.html
+++ b/case3.html
@@ -184,6 +184,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "case3");
   </script>
 </body>
 </html>
