--- a/charger1.html
+++ b/charger1.html
@@ -187,6 +187,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "charger1");
   </script>
 </body>
 </html>
