--- a/glass2.html
+++ b/glass2.html
@@ -179,6 +179,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "glass2");
   </script>
 </body>
 </html>
