--- a/headphones4.html
+++ b/headphones4.html
@@ -179,6 +179,7 @@
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
       alert("Товар додано до кошика!");
     }
+    localStorage.setItem("selectedProductId", "headphones4");
   </script>
 </body>
 </html>
